1. Fix misaligned blocks on person level page for the flash vis & the side-bar

--- a/productMods/css/visualization/personlevel/page.css
+++ b/productMods/css/visualization/personlevel/page.css
@@ -200,7 +200,6 @@ table.sparkline_wrapper_table td, th {
     background: #F7F9F9;
     width: 250px; 
     height: 615px;
-    margin-top: 15px;
     float: left;
 }
 #dataPanel div {
